--- a/src/widgets/about/about-section.astro
+++ b/src/widgets/about/about-section.astro
@@ -27,7 +27,7 @@ import { aboutTabs } from "../../features/about/model/about-tabs";
             class="opacity-0 translate-y-10 lg:translate-y-0 lg:translate-x-[-50px] mt-8 mb-[64px] lg:mb-0 lg:mt-0 sm:w-[80%] lg:w-[60%] xl:w-[65%]"
         >
             <Paragraph
-                text="Наш центр работает с материалами премиальных брендов и только с оригинальной продукцией. В их число входит: STEK, HOGOMAKU, LLUMAR."
+                text="Наш центр работает с материалами премиальных брендов и только с оригинальной продукцией. Такие как: STEK; COMFORTMAT; KochChemie; SONAX; ShineSystems"
                 variant="main"
                 align="text-center lg:text-left"
             />
