--- a/src/widgets/hero/hero-section.astro
+++ b/src/widgets/hero/hero-section.astro
@@ -83,7 +83,7 @@ import { HeroAnimation } from "@/features/hero/lib/animations/hero-animation";
         </h1>
         <Paragraph
           variant="hero"
-          text="Wrap Studio: защита вашего авто на годы. Полиуретановая пленка — броня от царапин, сколов и времени. Сохраняем идеальный вид, подчеркиваем стиль. Ваш автомобиль в надежных руках."
+          text="Wrap Studio - настоящая защита для тех, кто ценит своё авто. Полиуретановая броня против сколов, царапин и времени. Без компромиссов — только топовые материалы и безупречная работа."
           className="mt-4 sm:mt-8 sm:w-[80%] md:w-[60%] lg:w-[75%] xl:w-[60%] 3xl:w-[45%] lg:mb-28 xl:mb-36 2xl:mb-48"
         />
       </div>
