--- a/src/widgets/portfolio-inner/portfolio-inner.astro
+++ b/src/widgets/portfolio-inner/portfolio-inner.astro
@@ -23,20 +23,19 @@ import { portfolioCards } from "../../features/portfolio/lib/mock-data";
 
     <div
         id="portfolioCards"
-        class="flex flex-col lg:grid lg:grid-cols-2 lg:gap-x-11 lg:gap-y-24 gap-y-8 lg:mt-8 items-center mt-8 mb-12 last:mb-0 w-full"
+        class="flex flex-col lg:grid lg:grid-cols-2 lg:gap-x-11 lg:gap-y-24 gap-y-8 lg:mt-16 mt-8 mb-12 last:mb-0 w-full"
     >
         {
             portfolioCards.map((card, index) => (
                 <div
                     class={`portfolio-card opacity-0 translate-y-10 
-                    ${
-                        portfolioCards.length % 2 !== 0 &&
-                        index === portfolioCards.length - 1
-                            ? "lg:col-span-2"
-                            : ""
-                    }`}
+                    ${index === portfolioCards.length - 1 ? "lg:col-span-2" : ""}`}
                 >
-                    <PortfolioCard {...card} client:only="react" />
+                    <PortfolioCard
+                        {...card}
+                        isExtended={index === portfolioCards.length - 1}
+                        client:visible
+                    />
                 </div>
             ))
         }
