--- a/src/widgets/services/services-section.astro
+++ b/src/widgets/services/services-section.astro
@@ -24,17 +24,17 @@ import { services } from "../../features/services/model/services";
         </div>
         <div
             id="paragraph"
-            class="opacity-0 translate-y-10 lg:translate-y-0 lg:translate-x-[50px] mt-8 mb-8 lg:mt-0 lg:mb-0 sm:w-[80%] md:w-[60%] xl:w-[55%] 2xl:w-[50%] 3xl:w-[45%] 4xl:w-[40%]"
+            class="opacity-0 translate-y-10 lg:translate-y-0 lg:translate-x-[50px] mt-8 mb-8 lg:mt-0 lg:mb-0 sm:w-[80%] md:w-[60%]"
         >
             <Paragraph
-                text="Все, что нужно для защиты и безупречного вида вашего автомобиля."
+                text="Защита. Комфорт. Качество Все необходимые услуги, чтобы ваш авто был под полной защитой, а вам - комфортно в каждой поездке."
                 variant="main"
                 align="lg:text-right text-center"
             />
         </div>
     </div>
 
-    <div id="serviceCardsMob" class="w-full">
+    <div id="serviceCardsMob" class="w-full mt-8">
         {
             services.map((service, index) => (
                 <div class="service-card-mob opacity-0 translate-y-10 flex flex-col items-center mb-8 last:mb-0 w-full lg:hidden">
