--- a/src/widgets/portfolio-inner/portfolio-inner.astro
+++ b/src/widgets/portfolio-inner/portfolio-inner.astro
@@ -26,7 +26,7 @@ import { portfolioCards } from "../../features/portfolio/lib/mock-data";
         class="flex flex-col lg:grid lg:grid-cols-2 lg:gap-x-11 lg:gap-y-24 gap-y-8 lg:mt-16 mt-8 mb-12 w-full"
     >
         {
-            portfolioCards.slice(0, 4).map((card) => (
+            portfolioCards.map((card) => (
                 <div
                     class={`portfolio-card opacity-0 translate-y-10 mb-20 lg:mb-0 last:mb-0`}
                 >
